# cpp-game-engine

./: .gitignore  CMakeLists.txt  README.md
camera/camera_depth/: CMakeLists.txt  Camera.cpp  Camera.h  GameObject.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h  Texture2D.cpp  Transform.h  main.cpp
camera/perspective_camera/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
camera/two_camera/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  GameObject.cpp  Material.h  MeshRenderer.cpp  main.cpp
component/gameobject_component/: CMakeLists.txt  GameObject.h  Material.cpp  MeshRenderer.cpp  Shader.cpp  Transform.cpp  main.cpp
draw_polygon/draw_cube/: CMakeLists.txt  VertexData.h  main.cpp
draw_polygon/draw_quad/: CMakeLists.txt  VertexData.h  main.cpp
draw_polygon/draw_triangle/: CMakeLists.txt  VertexData.h  main.cpp
export_blender/load_mesh_from_blender/: CMakeLists.txt  Material.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.h  Shader.h  Texture2D.h  main.cpp
hello_world/: CMakeLists.txt  main.cpp
mesh_and_material/export_mesh_file/: CMakeLists.txt  VertexData.h  main.cpp
mesh_and_material/load_mesh_file/: CMakeLists.txt  MeshFilter.cpp  MeshFilter.h  Shader.cpp  Shader.h  Texture2D.cpp  main.cpp
mesh_and_material/mesh_renderer/: Application.h  CMakeLists.txt  Material.cpp  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  main.cpp
mesh_and_material/use_material/: CMakeLists.txt  Material.cpp  Shader.cpp  main.cpp
mesh_and_material/use_shader_file/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
res/images/: input_compressed.cpt
res/material/: cude.mat  fish_soup.mat
res/model/: Plane.008.mesh  cube.mesh
res/shader/: Unlit.fs
test/test_freeiamge/: CMakeLists.txt  main.cpp
test/test_rttr/: CMakeLists.txt  main.cpp
texture/draw_cube_compress_texture/: CMakeLists.txt  VertexData.h  main.cpp
texture/draw_cube_texture/: CMakeLists.txt  Texture2D.cpp  Texture2D.h  main.cpp
texture/export_compressed_texture/: CMakeLists.txt  Texture2D.cpp  Texture2D.h  main.cpp
texture/load_imge/: CMakeLists.txt  ShaderSource.h  Texture2D.cpp  Texture2D.h  main.cpp
vertex_index_and_buffer/buffer_object/: CMakeLists.txt  ShaderSource.h  VertexData.h  main.cpp
vertex_index_and_buffer/indices/: CMakeLists.txt  main.cpp
vertex_index_and_buffer/vao/: CMakeLists.txt  ShaderSource.h  main.cpp
vertex_index_and_buffer/vector/: CMakeLists.txt  Texture2D.h  VertexData.h  main.cpp
