cmake_minimum_required(VERSION 3.28)
project(cpp_game_engine)

add_subdirectory(hello_world)
add_subdirectory(draw_polygon/draw_triangle)
add_subdirectory(draw_polygon/draw_quad)
add_subdirectory(draw_polygon/draw_cube)

#add_subdirectory(test/test_freeiamge)
add_subdirectory(test/test_rttr)

add_subdirectory(texture/load_imge)
add_subdirectory(texture/draw_cube_texture)
add_subdirectory(texture/export_compressed_texture)
add_subdirectory(texture/draw_cube_compress_texture)

add_subdirectory(vertex_index_and_buffer/vector)
add_subdirectory(vertex_index_and_buffer/indices)
add_subdirectory(vertex_index_and_buffer/buffer_object)
add_subdirectory(vertex_index_and_buffer/vao)

add_subdirectory(mesh_and_material/export_mesh_file)
add_subdirectory(mesh_and_material/load_mesh_file)
add_subdirectory(mesh_and_material/use_shader_file)
add_subdirectory(mesh_and_material/use_material)
add_subdirectory(mesh_and_material/mesh_renderer)

add_subdirectory(export_blender/load_mesh_from_blender)